# Project2025

./: .env.example  .gitignore  DL_Experiments.md  DL_Experiments_MURA_DINOv2_Adapters_v3.ipynb  DL_Experiments_RESNET.ipynb  DL_Experiments_RESNET_collab.ipynb  DL_Experiments_densenet.ipynb  EDA.ipynb  ML full.ipynb  ML full_original.ipynb  ML.ipynb  ML_Experiments.ipynb  MLflow_Checkpoint_MURA.md  MLpynb  MURA_DINOv2_Adapters_v3 (6).ipynb  MURA_Project.ipynb  README.md  backend_devmode.sh  backup.sh  backup_hog.sh  backup_models.sh  bootstrap.sh  dl_notes.md  gen_pass.py  image-resize.ipynb  ml.py  pyproject.toml  readme.md  requirements.txt  run_grid_poly_logreg.py
.github/: CODEOWNERS
Authn/: .gitignore  README.md  Readme.md  create_admin.py  crud.py  db.py  main.py  models.py  requirements.txt  security.py
FastApi/: database.py
docs/: error_analysis.md  error_examples_10_20.csv  mlflow_colab_mura.md  model_deploy_from_gdrive.md  robustness_analysis.md  test_image_predictions.csv  test_study_predictions.csv  train_study_predictions.csv
frontend/: index.html  package-lock.json  package.json  vite.config.ts
ml/: data.py  fit.py  hog.py  linear.py  xgboost.py
notebooks/: CP_7_01_MURA_DINOv2_MLflow_Colab.ipynb  CP_7_02_MURA_DINOv2_MLflow_Colab_with_enhanced.ipynb  CP_7_03_MURA_DINOv2_PRD_Predict_Colab.ipynb  CP_7_04_MURA_DINOv2_Attention_MIL_Colab.ipynb  CP_7_05_MURA_DINOv2_Attention_TransMIL_Colab.ipynb  CP_7_06_01_MURA_DINOv2_Attention_TransMIL_Unfreeze_Backbone_Colab copy.ipynb  CP_7_06_02_MURA_DINOv2_Attention_TransMIL_Unfreeze_Backbone_Colab.ipynb  (+7 more)
(+70 files in other folders)
